unpackaged/main/default/objects/OrderApi__Log__c/OrderApi__Log__c.object-meta.xml
<CustomObject>
    <description>Logs track important events related to any &quot;Assignment&quot; object. Subscriptions use Logs to track all transaction and status change related events.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>