unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Assignment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the Subscription related to the Log.</description>
    <inlineHelpText>** System Calculated Override ** Link to the Subscription related to the Log.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>OrderApi__Assignment__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>