unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <description>** System Calculated Required Override ** The date the Log was generated.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the Log was generated.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>