unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>** System Calculated ** Derived from the conditions of linked records related to the Log.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, OrderApi__System_Message__c)
/*
IF (OR(OrderApi__Subscription__c != null &amp;&amp; ISPICKVAL(OrderApi__Type__c,&#39;Subscription Activated&#39;),
OrderApi__Subscription__c != null &amp;&amp; ISPICKVAL(OrderApi__Type__c,&#39;Subscription Renewed&#39;)),

HYPERLINK(&quot;/&quot; &amp; Id, TEXT(OrderApi__Type__c) &amp; &quot; by &quot; &amp; OrderApi__User__r.FirstName &amp; &quot; &quot; &amp; OrderApi__User__r.LastName),
HYPERLINK(&quot;/&quot; &amp; Id, TEXT(OrderApi__Type__c) &amp; &quot; by &quot; &amp; OrderApi__User__r.FirstName &amp; &quot; &quot; &amp; OrderApi__User__r.LastName))*/</formula>
    <inlineHelpText>** System Calculated ** Derived from the conditions of linked records related to the Log.</inlineHelpText>
    <label>Description</label>
    <type>Text</type>
</CustomField>