unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Is_Customer_Generated__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Customer_Generated__c</fullName>
    <description>** System Calculated ** Checked when the Log was generated by a customer, partner, or public (unauthenticated) user.</description>
    <formula>IF(ISPICKVAL(OrderApi__User__r.Profile.UserType,&quot;Standard&quot;), false, true)</formula>
    <inlineHelpText>** System Calculated ** Checked when the Log was generated by a customer, partner, or public (unauthenticated) user.</inlineHelpText>
    <label>Is Customer Generated</label>
    <type>Checkbox</type>
</CustomField>