unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Receipt__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to related Receipt.</description>
    <inlineHelpText>** System Calculated Override ** Link to related Receipt.</inlineHelpText>
    <label>Receipt</label>
    <referenceTo>OrderApi__Receipt__c</referenceTo>
    <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>