unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Scheduled_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the related Scheduled Payment.</description>
    <inlineHelpText>** System Calculated Override ** Link to the related Scheduled Payment.</inlineHelpText>
    <label>Scheduled Payment</label>
    <referenceTo>OrderApi__Scheduled_Payment__c</referenceTo>
    <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>