unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to related Subscription Plan.</description>
    <inlineHelpText>** System Calculated Override ** Link to related Subscription Plan.</inlineHelpText>
    <label>Subscription Plan</label>
    <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
    <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>