unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Subscription_Upgrade_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Upgrade_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the related Item that the Subscription was upgraded too.</description>
    <inlineHelpText>** System Calculated Override ** Link to the related Item that the Subscription was upgraded too.</inlineHelpText>
    <label>Subscription Upgrade Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Logs (DO NOT DISPLAY)</relationshipLabel>
    <relationshipName>Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>