unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__System_Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__System_Message__c</fullName>
    <description>** System Calculated ** System generated message that provides context for the Log - the value of this field is used when generating the &quot;Description&quot; for the Log and is populated by a system trigger.</description>
    <inlineHelpText>** System Calculated ** System generated message that provides context for the Log - the value of this field is used when generating the &quot;Description&quot; for the Log and is populated by a system trigger.</inlineHelpText>
    <label>System Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>