unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>** System Calculated Required Override ** The Type of Log.</description>
    <inlineHelpText>** System Calculated Required Override ** The Type of Log.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Assigned</fullName>
            </value>
            <value>
                <fullName>Contact Unassigned</fullName>
            </value>
            <value>
                <fullName>Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Method Error Notification Sent</fullName>
            </value>
            <value>
                <fullName>Payment Method Updated</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Scheduled Payment Declined</fullName>
            </value>
            <value>
                <fullName>Scheduled Payment Processed</fullName>
            </value>
            <value>
                <fullName>Subscription Activated</fullName>
            </value>
            <value>
                <fullName>Subscription Cancelled</fullName>
            </value>
            <value>
                <fullName>Subscription Expired</fullName>
            </value>
            <value>
                <fullName>Subscription Renewal Reminder</fullName>
            </value>
            <value>
                <fullName>Subscription Renewed</fullName>
            </value>
            <value>
                <fullName>Subscription Suspended</fullName>
            </value>
            <value>
                <fullName>Subscription Upgraded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>