unpackaged/main/default/objects/OrderApi__Log__c/fields/OrderApi__User__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Required Override ** The User that generated the Log. Defaults to the same User as the &quot;Created By&quot; User for the same Log.</description>
    <inlineHelpText>** System Calculated Required Override ** The User that generated the Log. Defaults to the same User as the &quot;Created By&quot; User for the same Log.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>